--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,17 @@
 asgiref==3.7.2
 atomicwrites==1.4.0
 attrs==21.2.0
+black==24.4.2
 certifi==2023.11.17
 chardet==4.0.0
 charset-normalizer==2.0.3
 colorama==0.4.4
-Django==4.2.10
-django-cors-headers==3.14.0
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
+Django==4.2.13
+django-cors-headers==4.3.1
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
+flake8==7.1.0
 idna==2.10
 iniconfig==1.1.1
 packaging==21.0
@@ -17,9 +20,9 @@ pluggy==0.13.1
 py==1.10.0
 PyJWT==2.8.0
 pyparsing==2.4.7
-pytest==6.2.4
+pytest==8.2.2
 pytz==2023.3.post1
-requests==2.31.0
+requests==2.32.0
 sqlparse==0.4.4
 toml==0.10.2
 urllib3==1.26.18
